updated gitignore minor in combined

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 .Ruserdata
 MED_Conts_Toxins_teliko_2.csv
 cont_stabar.png
+number_cyanoto_med.pdf
+med_vs_cont.pdf
+Continents_test.nb.html
+Rplot001.jpg
+cont_stabar.pdf
+dendro.png
+graphics
+logo_poster
