--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ cont_stabar.pdf
 dendro.png
 graphics
 logo_poster
+Exploratory_methods.nb.html
+combined.pdf
+main_toxin_producers_MED.png
+main_toxin_producers_cont.pdf
+main_toxin_producers_cont.png
+newplot.png
+number_cyanotoxins_cont.png
+test.pdf
